# datalink_host

./: .gitignore  CJXYBY-上位机软件开发需求文件-20260224(1).docx  README.md  datalink-host-gui-onefile.spec  datalink-host-gui.spec  pyproject.toml  python-需求文档.docx
docs/: 当前程序数据流文档.md  项目技术设计草案.md
scripts/: build_windows_exe.ps1  diagnose_windows_qt.py  pyi_rth_pyside6_dlls.py  setup_windows_env.ps1
src/datalink_host/: __init__.py  __main__.py  app.py  debug_launcher.py  self_check.py  service_main.py  windows_service.py
src/datalink_host/core/: __init__.py  clock.py  config.py  frozen.py  logging.py  output_encoding.py  paths.py  validation.py
src/datalink_host/debug/: __init__.py  capture.py
src/datalink_host/gui/: __init__.py  app.py  main_window.py
src/datalink_host/ingest/: __init__.py  control_server.py  data_server.py  protocol.py
src/datalink_host/models/: __init__.py  messages.py
src/datalink_host/processing/: __init__.py  pipeline.py
src/datalink_host/services/: background_sink.py  gnss_time.py  gps_time.py  runtime.py  web_api.py  web_ui.py
src/datalink_host/storage/: miniseed.py
src/datalink_host/tools/: __init__.py  receiver_sim.py  replay.py  sender_sim.py
src/datalink_host/transport/: __init__.py  datalink.py
src/datalink_host/web/: index.html
tests/: test_packaging.py  test_protocol.py
